# docs/swagger.yaml
@@ -97,17 +97,13 @@ definitions:
     type: object
   github_com_pickle_pw_monolith_internal_types.CreateOrderReq:
     properties:
-      amount:
-        type: number
       category:
         $ref: '#/definitions/github_com_pickle_pw_monolith_db_sqlc.ContentCategory'
+      isAnonymously:
+        type: boolean
       message:
         type: string
       ordererUsername:
-        type: string
-      paymentType:
-        type: integer
-      receiverLink:
         type: string
     type: object
   github_com_pickle_pw_monolith_internal_types.GameNoteReq:
@@ -252,6 +248,8 @@ definitions:
     type: object
   github_com_pickle_pw_monolith_internal_types.ProfileRes:
     properties:
+      avatarUrl:
+        type: string
       counts:
         $ref: '#/definitions/github_com_pickle_pw_monolith_internal_types.CountsRes'
       createdAt:
@@ -260,6 +258,8 @@ definitions:
         type: string
       id:
         type: string
+      isAuthorized:
+        type: boolean
       isFollowing:
         type: boolean
       link:
@@ -546,6 +546,10 @@ paths:
         in: path
         name: link
         required: true
+        type: string
+      - description: Avatar size
+        in: query
+        name: avatarSize
         type: string
       produces:
       - application/json
@@ -1284,10 +1288,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/github_com_pickle_pw_monolith_internal_types.OrderRes'
+        "201":
+          description: Created
         "400":
           description: Bad Request
           schema:
@@ -1535,6 +1537,11 @@ paths:
       consumes:
       - application/json
       description: Get my profile
+      parameters:
+      - description: Avatar size
+        in: query
+        name: avatarSize
+        type: string
       produces:
       - application/json
       responses:
